[tool.pdm]
[tool.pdm.build]
run-setuptools = true

[tool.pdm.dev-dependencies]
test = ["pytest>=7.3.1"]
lint = ["black>=23.3.0", "isort>=5.12.0", "ruff>=0.0.263", "mypy>=1.2.0"]

[project]
name = "asgi_context"
version = "0.1.0"
description = "Simple request context for ASGI compatible applications"
authors = [{ name = "Marcin Paliwoda", email = "paliwoda.marcin@zoho.com" }]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend", "mypy>=1.2.0"]
build-backend = "pdm.backend"

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
python_version = "3.11"
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
select = ["F", "B"]
line-length = 120
unfixable = ["B"]
